--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
             <header>
                 <h2>Michael Holloway</h2>
                 <ul id="nav">
-                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./index.html">About</a></li>
                     <li><a id="active" href="./projects.html">Projects</a></li>
                     <li><a href="./about.html">Contact</a></li>
                     <li><a href="./about.html">Github</a></li>
