--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul id="nav">
                     <li><a id="active" href="./about.html">About</a></li>
                     <li><a href="./projects.html">Projects</a></li>
-                    <li><a href="./about.html">Contacts</a></li>
+                    <li><a href="./about.html">Contact</a></li>
                     <li><a href="./about.html">Github</a></li>
                 </ul>
             </header>
