--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>M. Holloway's Portfolio</title>
-    <link rel="stylesheet" href="Resources/style.css" />
+    <link rel="stylesheet" href="./resources/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap" rel="stylesheet">
@@ -17,8 +17,6 @@
                 <ul id="nav">
                     <li><a id="active" href="./about.html">About</a></li>
                     <li><a href="./projects.html">Projects</a></li>
-                    <li><a href="./about.html">Contact</a></li>
-                    <li><a href="./about.html">Github</a></li>
                 </ul>
             </header>
             <main>
@@ -64,6 +62,13 @@
                             </ul>
                         </div>
                     </div>
+                </section>
+                <section id="contact">
+                    <h3>Contact</h3>
+                    <p>
+                        Email: <a href="mailto:michaeljholloway@gmail.com" target="_blank">michaeljholloway@gmail.com</a> <br />
+                        Github: <a href="http://www.github.com/mjholloway" target="_blank">github.com/mjholloway</a>
+                    </p>
                 </section>
             </main>
         </div>
