--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>M. Holloway's Portfolio</title>
-    <link rel="stylesheet" href="Resources/style.css" />
+    <link rel="stylesheet" href="./resources/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap" rel="stylesheet">
@@ -13,10 +13,8 @@
             <header>
                 <h2>Michael Holloway</h2>
                 <ul id="nav">
-                    <li><a href="./index.html">About</a></li>
+                    <li><a href="./about.html">About</a></li>
                     <li><a id="active" href="./projects.html">Projects</a></li>
-                    <li><a href="./about.html">Contact</a></li>
-                    <li><a href="./about.html">Github</a></li>
                 </ul>
             </header>
             <main>
@@ -52,7 +50,7 @@
                             </div>
                             <div class="game-footer">
                                 <p class="enlarge-text">(Click photo to enlarge)</p>
-                                <p class="git-link">Link to Github: <a href="https://github.com/mjholloway/TowerDefense">Fruitpocalypse</a></p>
+                                <p class="git-link">Link to Github: <a href="https://github.com/mjholloway/TowerDefense" target="_blank">Fruitpocalypse</a></p>
                             </div>                           
                         </li>
 
@@ -82,7 +80,7 @@
                                 </div>
                             </div>
                             <div class="game-footer">
-                                <p class="git-link">Link to Github: <a href="https://github.com/mjholloway/RPG-Project">RPG Level</a></p>
+                                <p class="git-link">Link to Github: <a href="https://github.com/mjholloway/RPG-Project" target="_blank">RPG Level</a></p>
                                 <p class="enlarge-text">(Click photo to enlarge)</p>
                             </div>
                         </li>
@@ -112,7 +110,7 @@
                             </div>
                             <div class="game-footer">
                                 <p class="enlarge-text">(Click photo to enlarge)</p>
-                                <p class="git-link">Link to Github: <a href="https://github.com/mjholloway/6_Zombie_Runner">Zombie Runner</a></p>
+                                <p class="git-link">Link to Github: <a href="https://github.com/mjholloway/6_Zombie_Runner" target="_blank">Zombie Runner</a></p>
                             </div>
                         </li>
 
@@ -140,7 +138,7 @@
                                 </div>
                             </div>
                             <div class="game-footer">
-                                <p class="git-link">Link to Github: <a href="https://github.com/mjholloway/4_Argon_Assault">Argon Assault</a></p>
+                                <p class="git-link">Link to Github: <a href="https://github.com/mjholloway/4_Argon_Assault" target="_blank">Argon Assault</a></p>
                                 <p class="enlarge-text">(Click photo to enlarge)</p>
                             </div>
                         </li>
