--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>M. Holloway's Portfolio</title>
-    <link rel="stylesheet" href="./resources/style.css" />
+    <link rel="stylesheet" href="Resources/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
             <header>
                 <h2>Michael Holloway</h2>
                 <ul id="nav">
-                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./index.html">About</a></li>
                     <li><a id="active" href="./projects.html">Projects</a></li>
                 </ul>
             </header>
