Updated Argon Assault description

--- a/projects.html
+++ b/projects.html
@@ -130,10 +130,11 @@
                                 <div class="description">
                                     <h4>Argon Assault</h4>
                                     <p>
-                                        This is an on the rails shooter in which the player flies a ship through dangerous terrain and enemy ships and tries to survive while scoring
-                                        the most points possible. It was one of my earliest projects that contained a full level. I was able to practice using waypoints to move an
-                                        object throughout the scene, Unity's timeline feature to syncronize events, the terrain builder to create my own terrain, particle effects,
-                                        and UI elements. I also gained experience importing and implementing assets from the Unity Asset Store.
+                                        This is an on-the-rails shooter in which the player flies a ship through dangerous terrain and enemy ships and tries to survive while 
+                                        scoring the most points possible. It was one of my earliest projects containing a full level. In this project, I learned how to use 
+                                        waypoints to move objects throughout the scene in conjunction with Unity's timeline feature to synchronize events. I also used the 
+                                        terrain builder to create my own terrain, particle effects, and UI elements, and combined them with assets imported from the Unity Asset 
+                                        Store.
                                     </p>
                                 </div>
                             </div>
